feat(qdi-docker): adicionar healthcheck para serviço API e ajustar dependência no Docker Compose
- Implementado healthcheck para garantir que o serviço `api` só inicia após a verificação de saúde bem-sucedida.
- Alterada a condição de dependência de `service_started` para `service_healthy` no serviço `web`.
